fix: allow region-only location draft state